.learnings/maintenance.log
  File "/root/.openclaw/workspace/.learnings/memory_maintenance.py", line 178
    lines = [l for l in err.split('
                                  ^
SyntaxError: unterminated string literal (detected at line 178)
Mon May  4 09:41:03 AM CST 2026
Script syntax fixed, ran at Mon May  4 09:41:03 AM CST 2026
